--- a/Strong Fit/Views/Academia/CreateExercicio.cshtml
+++ b/Strong Fit/Views/Academia/CreateExercicio.cshtml
@@ -1,16 +1,16 @@
-﻿@model Strong_Fit.Models.Personal
+﻿@model Strong_Fit.Models.Exercicio
 
 @{
-    ViewData["Title"] = "CreatePersonal";
+    ViewData["Title"] = "CreateExercicio";
 }
 
-<h1>CreatePersonal</h1>
+<h1>CreateExercicio</h1>
 
-<h4>Personal</h4>
+<h4>Exercicio</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreatePersonal">
+        <form asp-action="CreateExercicio">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
@@ -18,9 +18,14 @@
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Especialidade" class="control-label"></label>
-                <input asp-for="Especialidade" class="form-control" />
-                <span asp-validation-for="Especialidade" class="text-danger"></span>
+                <label asp-for="Categoria" class="control-label"></label>
+                <input asp-for="Categoria" class="form-control" />
+                <span asp-validation-for="Categoria" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Descricao" class="control-label"></label>
+                <input asp-for="Descricao" class="form-control" />
+                <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -30,7 +35,7 @@
 </div>
 
 <div>
-    <a asp-action="IndexPersonal">Back to List</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
