--- a/Strong Fit/Views/Academia/EditAluno.cshtml
+++ b/Strong Fit/Views/Academia/EditAluno.cshtml
@@ -1,17 +1,18 @@
 ﻿@model Strong_Fit.Models.Aluno
 
 @{
-    ViewData["Title"] = "CreateAlunos";
+    ViewData["Title"] = "EditAluno";
 }
 
-<h1>CreateAlunos</h1>
+<h1>EditAluno</h1>
 
 <h4>Aluno</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateAlunos">
+        <form asp-action="EditAluno">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="AlunoId" />
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
@@ -44,10 +45,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="PersonalId" class="control-label"></label>
-                <select asp-for="PersonalId" class ="form-control" asp-items="ViewBag.PersonalId"></select>
+                <select asp-for="PersonalId" class="form-control" asp-items="ViewBag.PersonalId"></select>
+                <span asp-validation-for="PersonalId" class="text-danger"></span>
             </div>
-            <div class="form-group" style="margin-top: 70px;">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
