--- a/Strong Fit/Views/Academia/EditPersonal.cshtml
+++ b/Strong Fit/Views/Academia/EditPersonal.cshtml
@@ -1,17 +1,18 @@
 ﻿@model Strong_Fit.Models.Personal
 
 @{
-    ViewData["Title"] = "CreatePersonal";
+    ViewData["Title"] = "EditPersonal";
 }
 
-<h1>CreatePersonal</h1>
+<h1>EditPersonal</h1>
 
 <h4>Personal</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreatePersonal">
+        <form asp-action="EditPersonal">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="PersonalId" />
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
@@ -23,7 +24,7 @@
                 <span asp-validation-for="Especialidade" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
