--- a/Strong Fit/Views/Academia/IndexPersonal.cshtml
+++ b/Strong Fit/Views/Academia/IndexPersonal.cshtml
@@ -7,7 +7,7 @@
 <h1>IndexPersonal</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="CreatePersonal">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -31,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.Especialidade)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.PersonalId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.PersonalId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.PersonalId">Delete</a>
+                <a asp-action="EditPersonal" asp-route-id="@item.PersonalId">Edit</a> |
+                <a asp-action="DetailsPersonal" asp-route-id="@item.PersonalId">Details</a> |
+                <a asp-action="DeletePersonal" asp-route-id="@item.PersonalId">Delete</a>
             </td>
         </tr>
 }
